# OGL_Template

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat
dynamicLibs/: list.txt
externLibs/: CMakeLists.txt
externLibs/SDL2/: CMakeLists.txt
externLibs/SDL2_image/: CMakeLists.txt
externLibs/SDL2_mixer/: CMakeLists.txt
externLibs/SDL2_ttf/: CMakeLists.txt
externLibs/glew-2.0.0/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/group_a/: CMakeLists.txt  funkce.cpp
