


# find_library(SDL2_MAIN_LIBRARY
    # NAMES libSDL2main    
    # HINTS ${CMAKE_CURRENT_LIST_DIR}/SDL2/lib
# )

# find_library(SDL2_LIBRARY
    # NAMES libSDL2 
    # HINTS ${CMAKE_CURRENT_LIST_DIR}/SDL2/lib
# )



# list(APPEND EXTERNAL_LIBS_HEADER_PATHS "${CMAKE_CURRENT_LIST_DIR}/SDL2/include/SDL2")

# list(APPEND EXTERNAL_LIBS "${SDL2_MAIN_LIBRARY}")
# list(APPEND EXTERNAL_LIBS "${SDL2_LIBRARY}")

add_subdirectory("SDL2")
add_subdirectory("SDL2_image")


set(EXTERNAL_LIBS_HEADER_PATHS "${EXTERNAL_LIBS_HEADER_PATHS}" PARENT_SCOPE)
set(EXTERNAL_LIBS "${EXTERNAL_LIBS}" PARENT_SCOPE)

message("externLibs")
